--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.1",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
